--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">GILANG RIZKI RAMADHAN</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Project</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -72,25 +72,45 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5s text-center">
-          <div class="col-4">
+          <div class="col-md-4">
             <p>
               Saya adalah orang yang berani mengambil resiko dengan penuh bertanggung jawab,senang mencari hal-hal yang baru yang sangat menarik untuk dipelajari jika kita berhenti belajar kita akan berhenti melakukan hal yang bermanfaat.
             </p>
           </div>
-          <div class="col-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore possimus tenetur fugit quia omnis nisi sunt veniam voluptatibus ipsa corporis alias ratione, quibusdam vero.</p>
+          <div class="col-md-4">
+            <p>Tujuan saya dalam menuntut ilmu dibidang REKAYASA PERANGKAT LUNAK (RPL) adalah mengembangkan hobi dan potensi diri saya dalam mengelola perangkat lunak guna mempersiapkan diri dalam persaingan teknlogi pada industri 5.0</p>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#0099ff"
-          fill-opacity="0.65"
-          d="M0,256L48,240C96,224,192,192,288,170.7C384,149,480,139,576,149.3C672,160,768,192,864,197.3C960,203,1056,181,1152,149.3C1248,117,1344,75,1392,53.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#abec12" fill-opacity="1" d="M0,128L24,133.3C48,139,96,149,144,165.3C192,181,240,203,288,197.3C336,192,384,160,432,138.7C480,117,528,107,576,96C624,85,672,75,720,74.7C768,75,816,85,864,85.3C912,85,960,75,1008,101.3C1056,128,1104,192,1152,218.7C1200,245,1248,235,1296,213.3C1344,192,1392,160,1416,144L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir About -->
+
+    <!-- projects -->
+    <section id="projects">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h2>MY PROJECTS</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <img src="cv.jpeg" class="card-img-center" alt="cv1">
+              <div class="card-body">
+                <p class="card-text-">Curriculum Vitae</p>
+              </div>
+            </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L48,133.3C96,139,192,149,288,144C384,139,480,117,576,96C672,75,768,53,864,69.3C960,85,1056,139,1152,144C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section> 
+    <!-- Akhir projects -->
+
 
     <!-- Contact -->
     <section id="contact">
@@ -113,18 +133,18 @@
                   <label for="Pesan" class="form-label">Pesan</label>
                   <textarea class="form-control" id="Pesan" rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Kirim</button>
+                <button type="submit" class="btn btn-info">Kirim</button>
             </form>
           </div>
         </div>
       </div>
-      
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#abec12" fill-opacity="1" d="M0,32L34.3,37.3C68.6,43,137,53,206,74.7C274.3,96,343,128,411,160C480,192,549,224,617,245.3C685.7,267,754,277,823,261.3C891.4,245,960,203,1029,202.7C1097.1,203,1166,245,1234,229.3C1302.9,213,1371,139,1406,101.3L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
     </section>
 
     <!-- Akhir Contact -->
 
     <!-- footer -->
-    <footer class="bg-info text-white text-center pb-5">
+    <footer class="bg-success text-white text-center pb-5">
       <p>create by GILANG RIZKI RAMADHAN</p>
     </footer>
     <!-- Akhir footer -->
