--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <section id="projects">
       <div class="container">
         <div class="row text-center">
-          <div class="col">
+          <div class="col-md-4">
             <h2>MY PROJECTS</h2>
           </div>
         </div>
         <div class="row">
           <div class="col">
             <div class="card">
-              <img src="cv.jpeg" class="card-img-center" alt="cv1">
+              <img src="project.jpeg" class="card-img-center" alt="project1">
               <div class="card-body">
                 <p class="card-text-">Curriculum Vitae</p>
               </div>
@@ -133,7 +133,7 @@
                   <label for="Pesan" class="form-label">Pesan</label>
                   <textarea class="form-control" id="Pesan" rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-info">Kirim</button>
+                <button type="submit" class="btn btn-primary">Kirim</button>
             </form>
           </div>
         </div>
